<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navHomeButton"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/navProgressButton"
        android:icon="@drawable/ic_progress"
        android:title="@string/nav_progress" />

    <item
        android:id="@+id/navProfileButton"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />

    <item
        android:id="@+id/navRewardsButton"
        android:icon="@drawable/ic_rewards"
        android:title="@string/nav_rewards" />

    <item
        android:id="@+id/navSettingsButton"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />

</menu>